--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,11 +16,45 @@ h1 {
 img {
     width: 150px;
     height: auto;
-    border: ipx solid black;
+    border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
 
 p {
     padding: 10px;
+}
+
+main {
+    max-width: 840px;
+}
+
+aside {
+    width: 20rem;
+    margin: 1rem;
+    border: 1px #0000;
+    padding: 1rem;
+    background: steelblue;
+    color: #ffff;
+    text-align: center;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+main img {
+    width: 150px;
+    height: auto;
+}
+
+p {
+    padding: 0;
+}
+
+footer {
+    margin-top: 15px;
+    border-top:1px solid #000;
+    text-align: center;
 }
