--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+:root {
+    --background-color:darkblue;
+    --border:1px solid rgb(3, 3, 3);
+    --padding:10px;
+    
+}
 nav {
     background-color: darkblue;
     padding: 10px;
