--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,10 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Spicy+Rice&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Pacifico&family=Spicy+Rice&display=swap');
+
 :root {
     --background-color:darkblue;
     --border:1px solid rgb(3, 3, 3);
@@ -9,7 +16,15 @@
     padding: 0;
     box-sizing: border-box;
 }    
-    
+
+body {
+    font-family: Inter,Arial, Helvetica, sans-serif;
+}
+
+h1{
+    font-family: Pacifico,cursive,'Times New Roman', Times, serif;
+}
+
 }
 nav {
     background-color: darkblue;
