--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,11 +10,15 @@
     --border:1px solid rgb(3, 3, 3);
     --padding:10px;
     --margin:0;
+    
+}
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
+    
 }    
 
 body {
@@ -25,20 +29,26 @@ h1{
     font-family: Pacifico,cursive,'Times New Roman', Times, serif;
 }
 
-}
+
 nav {
     background-color: darkblue;
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
 }
 
 nav a {
     color: white;
     display: block;
     padding: 30px;
+    text-decoration: none;
 }
 
 h1 {
     color: darkblue;
+    border-bottom:1px solid #220d49;
 }
 
 h2 {
@@ -53,7 +63,7 @@ img {
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
-    margin: 0 0 1rem 2rem;
+    margin: 1rem 0 1rem 2rem;
 }
 
 p {
@@ -61,29 +71,36 @@ p {
     margin: 2rem;
 }
 
-main {
-    max-width: 840px;
-}
-
 aside {
     width: 20rem;
     text-align: center;
     position: relative;
+    grid-row: 1
+    
+    
 }
 
 aside h2 {
     position: absolute;
-    left: 170px;
+    left: 100px;
+    top: 3px;
 }
 
 aside img {
     width: 200px;
     height: auto;
+    
 }
 
 main img {
     width: 150px;
     height: auto;
+}
+
+main {
+    grid-column: 2/3;
+    margin: 1rem;
+    
 }
 
 p {
@@ -96,12 +113,31 @@ footer {
     text-align: center;
 }
 
+header,footer {
+    max-width: 840px;
+    margin:0 auto;
+}
 
 /* class selectors*/
 .box {
+    display:grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    justify-content:center;
+    align-items: center;
     margin: 1rem;
     border: 1px solid rgb(2, 2, 2);
-    padding: 1rem;
+    padding: 2rem;
     background-color: rgb(224, 224, 248);
-    color: #ffff;
+    color: #0f0e0e;
+
+    
+}
+
+header,.grid,footer {
+    max-width: 840px;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
 }
