--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -26,12 +26,12 @@ h1 {
 }
 
 h2 {
-    position:absolute;
-    top: 585px;
+    grid-column: 2/6;
 }
 
 h3 {
-    grid-column:3/6 ;
+    grid-column:2/4;
+    text-decoration: underline;
     
 }
 
@@ -70,6 +70,74 @@ section {
 	
 }
 
+form {
+    width: 800px;
+    margin: 0 auto;
+    padding: 0.5em;
+    border: 1px solid #000;
+    border-radius: 0.5rem;
+    background-color: rgb(121, 118, 118);
+    display: grid;
+}
+
+fieldset {
+    display: grid;
+    gap: 20px;
+    margin: 1rem;
+    border: 1px solid #222;
+    padding: 0.5em;
+}
+
+legend {
+    color: rgb(37, 10, 155);
+    font-size: 1.2em;
+    padding: 0.5rem;
+}
+
+label {
+    text-align:right;
+    padding-right: 0.5rem;
+}
+
+input,select,textarea {
+    padding: 0.5rem;
+    font-size: 1.1rem;
+    
+}
+
+
+input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+    vertical-align: bottom;
+}
+
+input[type="radio"]{
+    width: 20px;
+    height:20px;
+    vertical-align: middle;
+}
+
+button {
+    margin: 0 18rem;
+    background-color:rgb(79, 31, 255);
+    color: #250e0e;
+    border: 2px solid #222;
+    border-radius: 0.2rem;
+    padding: .8rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+button:after {
+    content: ">>";
+}
+
+button:hover {
+    background-color: rgb(12, 87, 28);
+}
+
+
 footer {
     display: flex;
     margin: 1rem auto;
@@ -78,6 +146,23 @@ footer {
     background-color: #ace;
     width: 840px;
     height: 70px;
+}
+
+.form-element {
+    display: grid;
+    align-items: center;
+}
+.first {
+    grid-template-columns:1fr 3fr;
+    
+
+}
+
+.sec {
+    display:flex;
+    flex-direction: column;
+    align-items: start;
+    
 }
 
 .adventure {
@@ -109,7 +194,7 @@ footer {
 }
 
 .social-links a {
-    text-decoration: none;
+    text-decoration: underline;
     justify-content: center;
     align-items: center;
     
@@ -171,4 +256,26 @@ footer {
 .history {
     display: flex;
     justify-content: space-around;
+}
+
+.co-info {
+    display: grid;
+    background-color: #33a4e0;
+}
+
+.map {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #33a4e0;
+    flex-direction: row-reverse;
+}
+
+.staff {
+    display: grid;
+}
+
+.staff img {
+    width: 200px;
+    height: auto;
+    grid-template-rows: 1fr 2fr
 }
