--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -12,7 +12,11 @@
     
 }
 
-h1,h2,h3 { 
+main{
+    grid-column: 2/3;
+}
+
+h1,h2,h3,h4 { 
     font-family: Pacifico,cursive,serif;
 }
 
@@ -26,19 +30,41 @@ h1 {
 }
 
 h2 {
-    grid-column: 2/6;
+    position: absolute;
+    top: 585px;
 }
 
 h3 {
-    grid-column:2/4;
+    grid-column:3/6;
     text-decoration: underline;
     
 }
 
+h4 {
+    font-weight: bolder;
+    padding: 1rem;
+}
+
+figure {
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
+    padding: 5px;
+    align-items: center;
+
+}
+
+figure img {
+    width: 200px;
+    height: 150px;
+}
+
 figcaption {
+    display: block;
     font-size: small;
     background-color: #a2bcf3;
     justify-content: center;
+
 }
 
 nav {
@@ -67,6 +93,7 @@ section {
 	padding: 1em;
 	background-color: #ace;
 	width: min(800px, 100%);
+    justify-content: center;
 	
 }
 
@@ -78,6 +105,7 @@ form {
     border-radius: 0.5rem;
     background-color: rgb(121, 118, 118);
     display: grid;
+    justify-content: space-around;
 }
 
 fieldset {
@@ -137,6 +165,19 @@ button:hover {
     background-color: rgb(12, 87, 28);
 }
 
+table{
+    border: 1.5px solid #000;
+    width: 50%;
+    padding: 1rem;
+
+}
+
+th,td {
+    border: 1px #d62828;
+    background-color: #33a4e0;
+    padding: 0.5 rem;
+    text-align: justify;
+}
 
 footer {
     display: flex;
@@ -148,6 +189,12 @@ footer {
     height: 70px;
 }
 
+.action {
+    font-size: xx-large;
+    background-color: #33a4e0;
+    width: max-content;
+}
+
 .form-element {
     display: grid;
     align-items: center;
@@ -155,7 +202,6 @@ footer {
 .first {
     grid-template-columns:1fr 3fr;
     
-
 }
 
 .sec {
@@ -278,4 +324,48 @@ footer {
     width: 200px;
     height: auto;
     grid-template-rows: 1fr 2fr
+}
+
+.page {
+    display:inline-block;
+    
+}
+
+.col {
+    float:left;
+    padding: 10px;
+    height: auto;
+}
+
+.left {
+    width: 50%;
+}
+
+.right {
+    float: right;
+    width: 50%;
+    display: contents;
+}
+
+.purpose {
+    display: grid;
+    justify-items: center;
+
+}
+
+.purpose img {
+    width: 200px;
+    height: 150px;
+}
+
+.trip a {
+    color: #fff;
+    width: max-content;
+    background-color: #222;
+    margin: 1rem;
+    padding: 0.5rem;
+    box-sizing: border-box;
+    display: block;
+    font-weight: bolder;
+    text-decoration: none;
 }
